--- a/app/templates/calculation/form.hbs
+++ b/app/templates/calculation/form.hbs
@@ -47,5 +47,25 @@
       class='form-control'}}
   </div>
 
+  <div class="form-group">
+    <label for="mip_count">MIP count</label>
+    {{input
+      type='number'
+      step=1
+      value=mip_count
+      id='mip_count'
+      class='form-control'}}
+  </div>
+
+  <div class="form-group">
+    <label for="mip_volume">MIP volume (µL)</label>
+    {{input
+      type='number'
+      step=1
+      value=mip_volume
+      id='mip_volume'
+      class='form-control'}}
+  </div>
+
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
