--- a/app/templates/calculation/form.hbs
+++ b/app/templates/calculation/form.hbs
@@ -61,9 +61,19 @@
     <label for="mip_volume">MIP volume (µL)</label>
     {{input
       type='number'
-      step=1
+      step=0.01
       value=mip_volume
       id='mip_volume'
+      class='form-control'}}
+  </div>
+
+  <div class="form-group">
+    <label for="dna_amount_per_reaction">DNA amount per reaction (µL)</label>
+    {{input
+      type='number'
+      step=1
+      value=dna_amount_per_reaction
+      id='dna_amount_per_reaction'
       class='form-control'}}
   </div>
 
