--- a/app/templates/calculations.hbs
+++ b/app/templates/calculations.hbs
@@ -1,3 +1,18 @@
+<nav class="navbar navbar-light bg-faded">
+  <a class="navbar-brand" href="#">MIP Calculator</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      {{#link-to 'calculations.new.settings' class='nav-link'}}Settings{{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'calculations.new.protocol' class='nav-link'}}Protocol{{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'calculations.new.preparation' class='nav-link'}}Preparation{{/link-to}}
+    </li>
+  </ul>
+</nav>
+
 <div class="container">
   {{outlet}}
 </div>
