--- a/app/templates/calculation/form/protocol.hbs
+++ b/app/templates/calculation/form/protocol.hbs
@@ -83,8 +83,8 @@
       <td class="text-mono text-right">{{model.mip_capture_reagents}}</td>
     </tr>
     <tr>
-      <td class="text-right">MIPs Pool</td>
-      <td class="text-mono text-right">{{model.phosphorylation_mips_pool_volume}}</td>
+      <td class="text-right">hg DNA</td>
+      <td class="text-mono text-right">{{model.mip_capture_sample_dna}}</td>
     </tr>
   </tbody>
 </table>
