--- a/app/templates/calculations.hbs
+++ b/app/templates/calculations.hbs
@@ -14,5 +14,9 @@
 </nav>
 
 <div class="container">
-  {{outlet}}
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      {{outlet}}
+    </div>
+  </div>
 </div>
