--- a/app/templates/calculation/form/protocol.hbs
+++ b/app/templates/calculation/form/protocol.hbs
@@ -1,4 +1,8 @@
-<h3>Probes pooling and 5' phosphorylation</h3>
+<h3>1. Probes pooling and 5' phosphorylation</h3>
+
+<p class="text-muted">Note: Plates and tubes should be always placed on ice during manipulation.</p>
+
+<h4>Reaction Contents (µL)</h4>
 <table class="table table-sm table-bordered">
   <thead>
     <tr>
@@ -26,7 +30,19 @@
   </tbody>
 </table>
 
-<h3>MIP capture reaction</h3>
+<ol>
+  <li>Remove MIP plates and let it thaw.</li>
+  <li>Vortex and centrifuge plate.</li>
+  <li>Add the amount specified on table above of each MIP to an eppendorf tube.</li>
+  <li>Add water.</li>
+  <li>Vortex and add T4 PNK.</li>
+  <li>Vortex and add T4 Ligase Buffer.</li>
+  <li>Vortex and centrifuge tube.</li>
+  <li>Transfer contents to a PCR tube. (May be split into 2 tubes, make sure to change the reaction volume on the thermocycler)</li>
+  <li>Incubate at 37 C for 45 min and then 65 C for 20 min.</li>
+</ol>
+
+<h4>MIP capture reaction</h4>
 <table class="table table-sm table-bordered">
   <thead>
     <tr>
@@ -69,7 +85,7 @@
   </tbody>
 </table>
 
-<h3>Add to Each Well</h3>
+<h4>Add to Each Well</h4>
 <table class="table table-sm table-bordered">
   <thead>
     <tr>
@@ -87,4 +103,72 @@
       <td class="text-mono text-right">{{model.mip_capture_sample_dna}}</td>
     </tr>
   </tbody>
+</table>
+
+<h3>Exonuclease Treatment</h3>
+<table class="table table-sm table-bordered">
+  <thead>
+    <tr>
+      <th></th>
+      <th class="text-right">Single</th>
+      <th class="text-right">Master Mix</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="text-right">Exo I</td>
+      <td class="text-mono text-right">{{model.exo_treatment_exo1}}</td>
+      <td class="text-mono text-right">{{model.exo_treatment_mix_exo1}}</td>
+    </tr>
+    <tr>
+      <td class="text-right">Exo III</td>
+      <td class="text-mono text-right">{{model.exo_treatment_exo3}}</td>
+      <td class="text-mono text-right">{{model.exo_treatment_mix_exo3}}</td>
+    </tr>
+    <tr>
+      <td class="text-right">Ampligase Buffer 10X</td>
+      <td class="text-mono text-right">{{model.exo_treatment_ampligase_buffer}}</td>
+      <td class="text-mono text-right">{{model.exo_treatment_mix_ampligase_buffer}}</td>
+    </tr>
+    <tr>
+      <td class="text-right">Water</td>
+      <td class="text-mono text-right">{{model.exo_treatment_water}}</td>
+      <td class="text-mono text-right">{{model.exo_treatment_mix_water}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3>Amplification of Capture Circles and Library Barcoding</h3>
+<table class="table table-sm table-bordered">
+  <thead>
+    <tr>
+      <th></th>
+      <th class="text-right">Single</th>
+      <th class="text-right">Master Mix</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="text-right">2X iProof (0.04units/µL)*</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_iproof}}</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_mix_iproof}}</td>
+    </tr>
+    <tr>
+      <td class="text-right">F primer (100µM)</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_fprimer}}</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_mix_fprimer}}</td>
+    </tr>
+    <tr>
+      <td class="text-right">Water</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_water}}</td>
+      <td class="text-mono text-right">{{model.pcr_barcoding_mix_water}}</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="3">
+        <small class="text-muted">* 2X iProof: 20 parts of 5X iProof Buffer, 2 parts of 10mM dNTP mix, 1 part of iProof, 27 parts of water.</small>
+      </td>
+    </tr>
+  </tfoot>
 </table>
