added instuctions to library prep

--- a/app/templates/calculation/form/preparation.hbs
+++ b/app/templates/calculation/form/preparation.hbs
@@ -8,8 +8,9 @@
     id='pcr_product_volume'
     class='form-control'}}
 </div>
+<h5>Purification Reaction</h5>
 <div>
-  <label for="purification_reaction">Purification Reaction</label>
+  <label for="purification_reaction">Add to a tube</label>
   <table class="table table-sm table-bordered">
     <thead>
       <tr>
@@ -29,6 +30,14 @@
     </tbody>
   </table>
 </div>
+<ol>
+  <li>Place the tube on the magnetic rack and wait 5 minutes.</li>
+  <li>Discard clear solution.</li>
+  <li>Wash the debrid with 200µL of 70% ethanol. Repeat.</li>
+  <li>Discard clear solution.</li>
+  <li>Elute in 40µL (2x) of EB buffer.</li>
+  <li>transfer sample to new tube.</li>
+</ol>
 <h4>Library Dilution Calculation</h4>
 <div class="form-group">
   <label for="dna_sample_concentration">DNA sample concentration (ng/µL)</label>
