--- a/app/templates/calculation/form/preparation.hbs
+++ b/app/templates/calculation/form/preparation.hbs
@@ -1,109 +1,117 @@
-<h4>DNA Purification</h4>
-<div class="form-group">
-  <label for="pcr_product_volume">PCR Product Volume(µL)</label>
-  {{input
-    type='number'
-    disabled=false
-    value=model.pcr_product_volume
-    id='pcr_product_volume'
-    class='form-control'}}
-</div>
-<h5>Purification Reaction</h5>
-<div>
-  <label for="purification_reaction">Add to a tube</label>
-  <table class="table table-sm table-bordered">
-    <thead>
-      <tr>
-        <th></th>
-        <th class="text-right">Volume (µL)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="text-right">Total PCR Product</td>
-        <td class="text-mono text-right">{{model.pcr_product_pool_volume}}</td>
-      </tr>
-      <tr>
-        <td class="text-right">Ampure Beads</td>
-        <td class="text-mono text-right">{{model.ampure_beads_volume}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<ol>
-  <li>Place the tube on the magnetic rack and wait 5 minutes.</li>
-  <li>Discard clear solution.</li>
-  <li>Wash the debrid with 200µL of 70% ethanol. Repeat.</li>
-  <li>Discard clear solution.</li>
-  <li>Elute in 40µL (2x) of EB buffer.</li>
-  <li>transfer sample to new tube.</li>
-</ol>
-<h4>Library Dilution Calculation</h4>
-<div class="form-group">
-  <label for="dna_sample_concentration">DNA sample concentration (ng/µL)</label>
-  {{input
-    type='number'
-    step=1
-    value=model.dna_sample_concentration
-    id='dna_sample_concentration'
-    class='form-control'}}
-</div>
-<h5>Library concentration</h5>
-<div class="form-group">
-  <label for="sample_count">Qubit read</label>
-  {{input
-    type='number'
-    step=1
-    value=model.qubit_read
-    id='qubit_read'
-    class='form-control'}}
-</div>
-<h5>Library Dilution</h5>
-<div class="form-group">
-  <label for="library_concentration_required">Library Concentration Required (µM)</label>
-  {{input
-    type='number'
-    step=1
-    value=model.library_concentration_required
-    id='library_concentration_required'
-    class='form-control'}}
-</div>
-<div class="form-group">
-  <label for="library_mean_dna_size">Fragment DNA Mean Size</label>
-  {{input
-    type='number'
-    step=1
-    value=model.library_mean_dna_size
-    id='library_mean_dna_size'
-    class='form-control'}}
-</div>
-<div class="form-group">
-  <label for="library_volume_required">Library Volume Required</label>
-  {{input
-    type='number'
-    step=1
-    value=model.library_volume_required
-    id='library_volume_required'
-    class='form-control'}}
-</div>
-<div>
-  <label for="library_dilution">Library Dilution</label>
-  <table class="table table-sm table-bordered">
-    <thead>
-      <tr>
-        <th></th>
-        <th class="text-right">Volume (µL)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="text-right">Library Amount</td>
-        <td class="text-mono text-right">{{model.dilution_library_volume}}</td>
-      </tr>
-      <tr>
-        <td class="text-right">Water</td>
-        <td class="text-mono text-right">{{model.dilution_water_volume}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="row">
+  <div class="col-md-4">
+    <h5>DNA Purification</h5>
+    <div class="form-group">
+      <label for="pcr_product_volume">PCR Product Volume(µL)</label>
+      {{input
+        type='number'
+        disabled=false
+        value=model.pcr_product_volume
+        id='pcr_product_volume'
+        class='form-control'}}
+    </div>
+    <h5>Purification Reaction</h5>
+    <div>
+      <label for="purification_reaction">Add to a tube</label>
+      <table class="table table-sm table-bordered">
+        <thead class="thead-inverse">
+          <tr>
+            <th></th>
+            <th class="text-right">Volume (µL)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="text-right">Total PCR Product</td>
+            <td class="text-mono text-right">{{model.pcr_product_pool_volume}}</td>
+          </tr>
+          <tr>
+            <td class="text-right">Ampure Beads</td>
+            <td class="text-mono text-right">{{model.ampure_beads_volume}}</td>
+          </tr>
+        </tbody>
+      </table>
+      </div>  
+      <ol>
+        <li>Place the tube on the magnetic rack and wait 5 minutes.</li>
+        <li>Discard clear solution.</li>
+        <li>Wash the debrid with 200µL of 70% ethanol. Repeat.</li>
+        <li>Discard clear solution.</li>
+        <li>Elute in 40µL (2x) of EB buffer.</li>
+        <li>transfer sample to new tube.</li>
+      </ol>
+  </div>
+  <div class="col-md-4">
+    <h5>Library Dilution Calculation</h5>
+    <div class="form-group">
+      <label for="dna_sample_concentration">DNA sample concentration (ng/µL)</label>
+      {{input
+        type='number'
+        step=1
+        value=model.dna_sample_concentration
+        id='dna_sample_concentration'
+        class='form-control'}}
+    </div>
+    <h5>Library concentration</h5>
+    <div class="form-group">
+      <label for="sample_count">Qubit read</label>
+      {{input
+        type='number'
+        step=1
+        value=model.qubit_read
+        id='qubit_read'
+        class='form-control'}}
+    </div>
+  </div>  
+  <div class="col-md-4">
+    <h5>Library Dilution</h5>
+    <div class="form-group">
+      <label for="library_concentration_required">Library Concentration Required (µM)</label>
+      {{input
+        type='number'
+        step=1
+        value=model.library_concentration_required
+        id='library_concentration_required'
+        class='form-control'}}
+    </div>
+    <div class="form-group">
+      <label for="library_mean_dna_size">Fragment DNA Mean Size</label>
+      {{input
+        type='number'
+        step=1
+        value=model.library_mean_dna_size
+        id='library_mean_dna_size'
+        class='form-control'}}
+    </div>
+    <div class="form-group">
+      <label for="library_volume_required">Library Volume Required</label>
+      {{input
+        type='number'
+        step=1
+        value=model.library_volume_required
+        id='library_volume_required'
+        class='form-control'}}
+    </div>
+    <div>
+      <label for="library_dilution">Library Dilution</label>
+      <table class="table table-sm table-bordered">
+        <thead class="thead-inverse">
+          <tr>
+            <th></th>
+            <th class="text-right">Volume (µL)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="text-right">Library Amount</td>
+            <td class="text-mono text-right">{{model.dilution_library_volume}}</td>
+          </tr>
+          <tr>
+            <td class="text-right">Water</td>
+            <td class="text-mono text-right">{{model.dilution_water_volume}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
