--- a/app/templates/calculations.hbs
+++ b/app/templates/calculations.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" href="#">MIP Calculator</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
